k8s-staging/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authservice-backend-staging
  namespace: staging
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.stg.institutoitinerante.com.br`)
      kind: Rule
      services:
        - name: authservice-backend
          port: 3010

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authservice-frontend-staging
  namespace: staging
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`admin-auth.stg.institutoitinerante.com.br`)
      kind: Rule
      services:
        - name: authservice-frontend
          port: 80
